<resources>
    <string name="app_name" translatable="false">Sova</string>
    <string name="Introduction_Introduction">Updates: \n\nSova is an application that can help you find your phone when it gets lost.\nIt uses SMS (texting) to communicate and send commands from a second device so you can track your phone.\nJust send a SMS message that contains the "Sova" command.\nPlease note that this application is still in beta.\n\n - NTMSecurity</string>
    <string name="Introduction_UpdatePermission">Some new permissions are needed.\nPlease check the following permissions in order to continue using this application, or change back later.</string>
    <string name="Permission_SMS">In order to command the phone to do something, this application needs to be able to see your SMS messages. Your messages never leave your phone, and they are never used for anything except finding your phone.\nThis Permission is needed.</string>
    <string name="Permission_CONTACTS">Not everybody is allowed to send commands to your phone, so you need to select some contacts who will be able to locate your device.\nThis permission is needed.</string>
    <string name="Permission_GPS">If you want to get the GPS coordinates from your phone, the application needs this permission. \nPlease also allow the application to locate your phone in the background.\nIf you don\'t give this permission, this functionality will not be activated.</string>
    <string name="Permission_DND">You also can make your phone ring to help you locate it. When \"Do Not Disturb\" is active, it may be possible that the phone is muted.\nIf you don\'t give this permission, this functionality will not be activated.</string>
    <string name="Permission_DEVICE_ADMIN">If you want to lock or wipe your phone if it gets lost, this permission is needed.\nIf you don\'t give this permission, this functionality will not be activated.</string>
    <string name="Permission_WRITE_SECURE_SETTINGS">This application is capable of turning on location if you normally leave location off.\nIf it is off, \"Sova locate\" will not work.\nIn order to achieve this, the application needs a special permission that you have to grant using a computer.\nIf you don\'t give this permission, it\'s no problem.\nYou can still use this application.</string>
    <string name="Permission_OVERLAY">When you remotely lock your device, this application can show a message on the lockscreen for whoever finds your phone.\nIf you don\'t give this permission, this functionality will not be activated.</string>
    <string name="Introduction_Give_Permission">Give Permission</string>
    <string name="Introduction_Next">Next</string>
    <string name="Locked_Lock_Screen">This phone is locked by Sova!\nMessage from the owner:</string>
    <string name="About">About</string>
    <string name="About_Text">Thank you for downloading this app!\nThere is still a lot to do, but I hope this app will help you.</string>
    <string name="About_Used_APIs">Used APIs:\n</string>
    <string name="About_UsedApis_Content" translatable="false">androidx.appcompat:appcompat:1.2.0\nandroidx.constraintlayout:constraintlayout:2.0.1\nandroidx.legacy:legacy-support-v4:1.0.0\nandroidx.preference:preference:1.1.1\njunit:junit:4.12\nandroidx.test.ext:junit:1.1.2\nandroidx.test.espresso:espresso-core:3.3.0\ncom.google.android.material:material:1.2.1\ncom.fasterxml.jackson.core:jackson-databind:2.10.0\ncom.android.volley:volley:1.1.1\norg.mindrot:jbcrypt:0.4\nandroidx.fragment:fragment:1.2.5\njakarta.xml.bind, name: jakarta.xml.bind-api, version: 2.3.2\nxerces, name: xercesImpl, version: 2.12.1\norg.bouncycastle, name: bcprov-jdk16, version: 1.46\ncom.android.support:multidex:1.0.3\ncom.github.Stjinchan:ExpandableCardView:1.3.0-beta02\ncom.github.iamrobj:NotificationHelperLibrary:2.0.5\ncom.github.UnifiedPush:android-connector:2.0.0\nOpenCellID\nOpenStreetMap</string>
    <string name="Info_Service" translatable="false">Sova</string>
    <string name="Info_CORE" translatable="false">CORE:</string>
    <string name="Info_GPS" translatable="false">GPS:</string>
    <string name="Info_DND" translatable="false">DND:</string>
    <string name="Info_DEVICE_ADMIN" translatable="false">DeviceAdmin:</string>
    <string name="Info_Overlay" translatable="false">Overlay:</string>
    <string name="Info_SecureSettings" translatable="false">SecureSettings:</string>
    <string name="Enable">Enable</string>
    <string name="Settings_Pin_Description">Used as confirmation before wiping the device or for temporary usage of the service.</string>
    <string name="Settings_Lockscreenmessage_Description">Lock Screen Message:\nWhen locking the device, this message will appear on the lock screen.</string>
    <string name="Settings_SovaCommand_Description">The command used to communicate with the Sova application.</string>
    <string name="Settings_PermissionDescription">The permissions needed for certain features</string>
    <string name="Settings_Permission">Permissions</string>
    <string name="WhiteList_Add_Contact">Add Contact</string>
    <string name="Enabled">Enabled</string>
    <string name="Disabled">Disabled</string>
    <string name="Granted">Granted: </string>
    <string name="Edit">Edit</string>
    <string name="contacts">contacts</string>
    <string name="Permission_IGNORE_BATTERY_OPTIMIZATION">This application is supposed to work in the background. To ensure it works even when your phone is in standby, you need to turn off battery optimization for this app.</string>
    <string name="Info_BatteryOptimization" translatable="false">OptimizeBattery</string>
    <string name="Main_Title" translatable="false">Info</string>
    <string name="Toast_Landcode_error">Please add the country code (Landcode) to the number. (Like "+20", "+50", ...)</string>
    <string name="Delete">Delete</string>
    <string name="WhiteList_Select_Action">Select an action:</string>
    <string name="Toast_Duplicate_contact">This contact already exists.</string>
    <string name="MH_GPS_WILL_FOLLOW">GPS coordinates will be sent soon.</string>
    <string name="MH_rings">rings</string>
    <string name="MH_Locked">locked</string>
    <string name="MH_Stats">Network-Stats:\nIP\'s: \n</string>
    <string name="MH_Networks">\nAvailable Wifi-Networks:\n</string>
    <string name="MH_Delete">Goodbye...</string>
    <string name="MH_False_Pin">False Pin!</string>
    <string name="MH_Syntax">Syntax:</string>
    <string name="MH_Title_Help">Sova Commands:</string>
    <string name="MH_Help_where">" locate - sends the current location of the phone"</string>
    <string name="MH_Help_ring">" ring - lets the phone ring"</string>
    <string name="MH_Help_Lock">" lock - locks the phone"</string>
    <string name="MH_Help_Stats">" stats - sends device information"</string>
    <string name="MH_Help_delete">" delete - resets the phone"</string>
    <string name="About_Help">Help</string>
    <string name="Settings_Sova_via_Pin_Description">Allows you to communicate with Sova via a pin. You will be added to a temporary Whitelist.</string>
    <string name="Settings_Sova_delete_Description">Allows you to communicate with Sova via a pin. You will be remove and wipe your data.</string>
    <string name="Settings_Enter_Pin">Enter Pin</string>
    <string name="MH_Pin_Accepted">Pin accepted!</string>
    <string name="Alert_First_time_whitelist">Here you can add your contacts to the whitelist. Whitelisted contacts will be able to send commands to your phone using SMS.</string>
    <string name="Alert_First_Time_contact_added">Congratulations. You have added your first contact. You can now communicate with Sova by sending a SMS message that contains \"Sova\" from the whitelisted phone number. When everything works, the application will respond.</string>
    <string name="R_Stop_ring">STOP RINGING</string>
    <string name="Settings_Log">Log</string>
    <string name="Settings_Show_log">Show Log</string>
    <string name="Crashed_Send_log">Send Log</string>
    <string name="MH_No_GPS">Sorry, location is turned off.</string>
    <string name="About_Version">Sova version:</string>
    <string name="Main_OpenWhiteList" translatable="false">+</string>
    <string name="Settings_SovaConfig">Sova-Config</string>
    <string name="Settings_WhiteList">WhiteList</string>
    <string name="Settings_OpenCellId">OpenCellId</string>
    <string name="Settings_Permissions">Permissions</string>
    <string name="Settings_Logs">Logs/History</string>
    <string name="Settings_About">About</string>
    <string name="Settings_Share">Share</string>
    <string name="Settings_Settings">Settings</string>
    <string name="Error">Error</string>
    <string name="OpenCellId_OpenCellId">OpenCellId</string>
    <string name="OpenCellId_API_Key_Description">API-KEY (token):</string>
    <string name="Notification_Usage">Usage</string>
    <string name="Pin_Usage">PinUsage</string>
    <string name="Notification_Lifecycle">Lifecycle</string>
    <string name="Notification_Usage_Description">Notification about the service usage.</string>
    <string name="Notification_Lifecycle_Description">Notification about the Lifecycle of the Service.</string>
    <string name="Notification_Pin_Usage_Description">Notification about the pin usage.</string>
    <string name="JSON_RL_Error">Error gaining location from OpenCellID. Please try the following the link. The parameters you want are \"lon\" and \"lat\".</string>
    <string name="JSON_RL_OpenCellIdLocation">"OpenCellId-Location"</string>
    <string name="GPS_GSM_Data">GSM-Cell-Data:</string>
    <string name="LockScreen_Usage_detectd">LockScreenMessage: Usage detected.</string>
    <string name="LockScreen_Backbutton_pressed">LockScreenMessage: Back-Button pressed.</string>
    <string name="Toast_Empty_SovaCommand">Empty Command not allowed\n Returning to default.[sova]</string>
    <string name="SovaConfig_Alert_Pin">PIN</string>
    <string name="Ok">OK</string>
    <string name="Log_Alert_LogData">LogData</string>
    <string name="Sender_End_Of_Msg">---End of Message---</string>
    <string name="Settings_Ringer_Tone_Description">Select a ringtone that will be played when "Sova ring" is sent.</string>
    <string name="Settings_Select_Ringtone">Select Ringtone</string>
    <string name="WhiteList_Select_Number">Select one of the phone numbers.</string>
    <string name="Settings_SovaServer_Description">By enabling, the application will constantly send your location to the specified server.</string>
    <string name="Settings_SovaServer_URL_Description">The URL for accessing the server.</string>
    <string name="Settings_SovaServer_Updattime_Description">The time in minutes in which Sova should send new location data to the server.</string>
    <string name="Settings_SovaServer">Sova-Server</string>
    <string name="Settings_SovaServer_ID">SovaServer ID</string>
    <string name="NOT_AVAILABLE">Not Available</string>
    <string name="Available">Available</string>
    <string name="Settings_Sova_Server_ID_Desc">The ID you need to search for the Device.\n\nWill be shown once ServerSettings are filled and password is set.</string>
    <string name="Settings_SovaServer_Register_Button">Register on Server</string>
    <string name="Settings_SovaServer_LocationData_Description">Please select what location data to send to the server. (One needs to be selected)</string>
    <string name="GPS">GPS</string>
    <string name="Cell">Cell</string>
    <string name="Settings_SovaServer_AutoUpload_Description">When the location is requested by SMS or any other future method, the location can also be transmitted to the server if this option is enabled.</string>
    <string name="Settings_SovaServer_Delete_Button">Delete Data</string>
    <string name="Settings_SovaServer_LOW_BAT_Upload_Description">Send the location of this device when the battery level goes low. (This requires Notification Access)</string>
</resources>