<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SovaServerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"
                android:text="SovaServer" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_SovaServer_Description" />

            <CheckBox
                android:id="@+id/checkBoxSovaServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Enable" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"
                android:text="SovaServer Auto Upload" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_SovaServer_AutoUpload_Description" />

            <CheckBox
                android:id="@+id/checkBoxSovaServerAutoUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Enable" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"
                android:text="@string/Settings_SovaServer_ID" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_Sova_Server_ID_Desc" />

            <TextView
                android:id="@+id/textViewID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textAlignment="center"
                android:layout_margin="3mm"
                android:text="@string/NOT_AVAILABLE"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/buttonDeleteData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:ems="10"
                android:enabled="false"
                android:text="@string/Settings_SovaServer_Delete_Button"
                android:visibility="invisible" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"
                android:text="SovaServer URL" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_SovaServer_URL_Description" />

            <EditText
                android:id="@+id/editTextSovaServerUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2mm"
                android:layout_marginEnd="2mm"
                android:background="@color/material_dynamic_neutral90"
                android:ems="10"
                android:minHeight="48dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"
                android:text="0.0.0.0" />


            <Button
                android:id="@+id/buttonRegisterOnServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_margin="1mm"
                android:text="@string/Settings_SovaServer_Register_Button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"
                android:text="SovaServer Update Time" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_SovaServer_Updattime_Description" />

            <EditText
                android:id="@+id/editTextSovaServerUpdateTime"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2mm"
                android:layout_marginEnd="2mm"
                android:background="@color/material_dynamic_neutral90"
                android:ems="10"
                android:minHeight="48dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="15dp"
                android:maxLength="8"
                android:text="0" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"
                android:text="Location Data" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_SovaServer_LocationData_Description" />

            <CheckBox
                android:id="@+id/checkBoxSovaServerGPS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/GPS" />

            <CheckBox
                android:id="@+id/checkBoxSovaServerCell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Cell" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textColor="@color/colorAccent"
                android:text="Low Battery Customize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Settings_SovaServer_LOW_BAT_Upload_Description" />

            <CheckBox
                android:id="@+id/checkBoxSovaServerLowBatUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1mm"
                android:text="@string/Enable" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save"
                android:layout_gravity="center"
                android:layout_margin="2mm"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>