<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.OpenCellIdActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:layout_margin="2mm"
                android:textStyle="bold"
                android:textSize="17sp"
                android:text="@string/OpenCellId_OpenCellId" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2mm"
                android:text="@string/OpenCellId_API_Key_Description" />

            <EditText
                android:id="@+id/editTextOpenCellIDAPIKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2mm"
                android:layout_marginEnd="2mm"
                android:background="@color/material_dynamic_neutral90"
                android:ems="10"
                android:minHeight="48dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="" />

            <Button
                android:id="@+id/buttonOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ok"
                android:layout_gravity="end"
                android:layout_margin="2mm"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>